--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ bin-release/
 # Other files and folders
 .settings/
 .idea/
-data
+# data
 
 # Executables
 *.swf
@@ -16,12 +16,13 @@ data
 *.apk
 
 # files
+data/raw/research_dataset/Wikifonia/Wikifonia_xml
 */*/.DS_Store
-/**/*.zip
+# /**/*.zip
 /**/.DS_Store
 *.mid
 *.mp3
-*.zip
+# *.zip
 *.DS_Store
 .DS_Store
 .DS_Store
@@ -40,3 +41,5 @@ utils/.DS_Store
 *.pyc
 utils/mid_dp/.DS_Store
 utils/metrics/.DS_Store
+data/raw/research_dataset/Wikifonia/Wikifonia_mid_test/全局调性统一测试.zip
+data/raw/research_dataset/Wikifonia/Wikifonia_xml.zip
